Макет мед. клиники с применением grid, background-blend. Футер (форма обратной связи) еще в процессе.

--- a/homework4/styles/style.css
+++ b/homework4/styles/style.css
@@ -107,7 +107,7 @@ header .headerPromo {
   display: flex;
   justify-content: center;
   height: 640px;
-  background: url(../img/headerPromo.png) no-repeat center;
+  background: url(../img/headerPromoBgrSpot.png) 10% no-repeat, url(../img/headerPromoBgrMain.png) center no-repeat;
 }
 header .headerPromo .container {
   display: inline-block;
@@ -237,7 +237,10 @@ main .chooseReasons .container .reason p {
 }
 main .statistics {
   height: 592px;
-  background: url(../img/statisticsBgr.png) no-repeat center;
+  max-width: 1600px;
+  margin: 0 auto;
+  background: url(../img/statisticsBgrMain.png) no-repeat center, #0087be no-repeat center;
+  background-blend-mode: multiply;
 }
 main .statistics .container {
   display: grid;
@@ -274,17 +277,24 @@ main .statistics .container .stat p {
   padding-top: 20px;
 }
 main .howWork {
-  height: 893px;
+  height: 798px;
+  padding-top: 95px;
 }
 main .howWork .container {
   height: inherit;
   display: grid;
   grid-template-columns: 715px 1fr;
   grid-gap: 60px;
-  padding-top: 95px;
 }
 main .howWork .container .howCase h2 {
-  padding-bottom: 30px;
+  padding-bottom: 16px;
+}
+main .howWork .container .howCase p {
+  width: 650px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  padding-bottom: 44px;
 }
 main .howWork .container .howCase .caseWrap {
   display: flex;
@@ -293,6 +303,213 @@ main .howWork .container .howCase .caseWrap {
 main .howWork .container .howCase .caseWrap .case blockquote {
   width: 325px;
 }
+main .howWork .container .howCase .caseWrap .case blockquote h3 {
+  color: #6f6f6e;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: -1.21px;
+  padding: 24px 0 6px 0;
+}
+main .howWork .container .howCase .caseWrap .case blockquote time,
+main .howWork .container .howCase .caseWrap .case blockquote cite {
+  color: #0087be;
+  font-family: Montserrat;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: -0.38px;
+}
+main .howWork .container .howCase .caseWrap .case blockquote p {
+  width: 325px;
+  padding-top: 14px;
+  line-height: 30px;
+}
 main .howWork .container .creative h2 {
-  padding-bottom: 30px;
+  padding-bottom: 16px;
+}
+main .howWork .container .creative p {
+  width: 410px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  padding-bottom: 44px;
+}
+main .howWork .container .creative audio {
+  width: 422px;
+  padding-bottom: 12px;
+}
+main .gallery {
+  height: 826px;
+  max-width: 1600px;
+  margin: 0 auto;
+  background: url(../img/galleryBgrMain.png) no-repeat center, #38b69e;
+  background-blend-mode: multiply;
+}
+main .gallery .container h2 {
+  color: #fff;
+  text-align: center;
+  padding: 90px 0 34px 0;
+}
+main .gallery .container p {
+  color: #fff;
+  line-height: 30px;
+  text-align: center;
+  padding-bottom: 50px;
+}
+main .gallery .container .pictures {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-gap: 38px;
+  padding: 0 40px;
+}
+main .team {
+  height: 917px;
+}
+main .team .container h2 {
+  padding: 144px 0 40px 0;
+  color: #494949;
+  text-align: center;
+}
+main .team .container > p {
+  text-align: center;
+  line-height: 30px;
+  padding-bottom: 80px;
+}
+main .team .container .members {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(4, 1fr);
+}
+main .team .container .members .member {
+  text-align: center;
+}
+main .team .container .members .member img {
+  padding-bottom: 25px;
+}
+main .team .container .members .member h3 {
+  color: #6f6f6e;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+  font-weight: 500;
+  padding-bottom: 10px;
+}
+main .team .container .members .member p {
+  color: #6f6f6e;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: -1.09px;
+  padding-bottom: 28px;
+}
+main .team .container .members .member .memberSocials a {
+  color: #0087be;
+  font-family: "Font Awesome";
+  font-size: 25px;
+  font-weight: 400;
+  letter-spacing: 2.8px;
+  padding: 0 3px;
+}
+main .specialOffer {
+  background-color: #e2e2e2;
+}
+main .specialOffer .container {
+  text-align: center;
+}
+main .specialOffer .container h3 {
+  display: inline-block;
+  color: #494949;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 176px;
+  vertical-align: middle;
+}
+main .specialOffer .container .button {
+  width: 192px;
+  height: 54px;
+  display: inline-block;
+  margin-left: 77px;
+}
+footer {
+  background-color: #171717;
+}
+footer .container {
+  padding-top: 105px;
+  display: grid;
+  grid-template-rows: minmax(521px, auto);
+  grid-template-columns: minmax(224px, auto) minmax(132px, auto) minmax(188px, auto) minmax(234px, auto);
+  justify-content: space-between;
+  color: #fff;
+}
+footer .container h3 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.55px;
+  padding-bottom: 66px;
+}
+footer .container .footerColumn1 {
+  color: #fff;
+}
+footer .container .footerColumn1 .footerColumnWrap {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 70px 1fr;
+  align-items: flex-start;
+  justify-content: center;
+  row-gap: 50px;
+  font-size: 32px;
+}
+footer .container .footerColumn1 .socials * {
+  color: #fff;
+  font-size: 22px;
+  margin-right: 10px;
+}
+footer .container .footerColumn1 .socials {
+  padding-top: 60px;
+}
+footer .container .footerColumn2 ul,
+footer .container .footerColumn3 ul {
+  padding-left: 24px;
+  list-style-image: url(../img/footerListMarker.png);
+}
+footer .container .footerColumn2 ul li,
+footer .container .footerColumn3 ul li {
+  padding: 0 0 16px 10px;
+}
+footer .container .footerColumn2 ul li a,
+footer .container .footerColumn3 ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+footer .container .footerColumn:not(.footerColumn4) h3 {
+  text-align: center;
+}
+footer .container .footerColumn4 form > * {
+  width: 100%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid rgba(194, 194, 194, 0.42);
+  display: block;
+  color: rgba(255, 255, 255, 0.51);
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.4px;
+  padding-bottom: 8px;
+  outline: none;
+}
+footer .container .footerColumn4 form > * input {
+  height: 50px;
+}
+footer .footerBottom {
+  background-color: #1a1a1a;
+  height: 117px;
+}
+footer .footerBottom p {
+  text-align: center;
+  line-height: 117px;
+  color: #615555;
 }
