--- a/homework4/styles/style.css
+++ b/homework4/styles/style.css
@@ -32,6 +32,7 @@ p {
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
+  cursor: pointer;
 }
 .button:hover {
   background-color: #49acdd;
@@ -487,22 +488,65 @@ footer .container .footerColumn3 ul li a {
 footer .container .footerColumn:not(.footerColumn4) h3 {
   text-align: center;
 }
-footer .container .footerColumn4 form > * {
+footer .container .footerColumn4 {
+  width: 235px;
+  z-index: 2;
+}
+footer .container .footerColumn4 .feedbackForm {
   width: 100%;
-  background: none;
+  font-family: "Open Sans", sans-serif;
+  letter-spacing: 0.4px;
+}
+footer .container .footerColumn4 .feedbackForm .formGroup {
+  position: relative;
+  margin-bottom: 22px;
+}
+footer .container .footerColumn4 .feedbackForm .formGroup .formInput {
+  font-family: "Open Sans", sans-serif;
+  letter-spacing: 0.4px;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.51);
+  width: 100%;
+  padding-bottom: 10px;
   border: none;
   border-bottom: 1px solid rgba(194, 194, 194, 0.42);
-  display: block;
-  color: rgba(255, 255, 255, 0.51);
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  letter-spacing: 0.4px;
-  padding-bottom: 8px;
+  background-color: transparent;
+  transition: .3s;
   outline: none;
+  z-index: 2;
 }
-footer .container .footerColumn4 form > * input {
-  height: 50px;
+footer .container .footerColumn4 .feedbackForm .formGroup .formInput:focus {
+  border-bottom: 1px solid #c2c2c2;
+}
+footer .container .footerColumn4 .feedbackForm .formGroup .formInput:focus ~ .formLabel,
+footer .container .footerColumn4 .feedbackForm .formGroup .formInput:not(:placeholder-shown) ~ .formLabel {
+  top: -18px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.21);
+}
+footer .container .footerColumn4 .feedbackForm .formGroup .formLabel {
+  position: absolute;
+  color: rgba(255, 255, 255, 0.51);
+  top: 0;
+  left: 0;
+  transition: .3s;
+  z-index: -1;
+}
+footer .container .footerColumn4 .feedbackForm .formGroup .textarea {
+  height: 80px;
+}
+footer .container .footerColumn4 .feedbackForm .formButton {
+  width: 125px;
+  height: 35px;
+  border-radius: 17px;
+  background-color: #0088be;
+  outline: none;
+  transition: .3s;
+  cursor: pointer;
+}
+footer .container .footerColumn4 .feedbackForm .formButton:focus,
+footer .container .footerColumn4 .feedbackForm .formButton:hover {
+  background-color: #0088be9f;
 }
 footer .footerBottom {
   background-color: #1a1a1a;
