--- a/homework4/styles/style.less
+++ b/homework4/styles/style.less
@@ -40,6 +40,7 @@ p {
 	font-size: 18px;
 	font-weight: 700;
 	text-transform: uppercase;
+	cursor: pointer;
 }
 .button:hover {
 	background-color: #49acdd
@@ -554,21 +555,62 @@ footer {
 			text-align: center;
 		}
 		.footerColumn4 {
-			form > * {
+			width: 235px;
+			z-index: 2;
+			.feedbackForm {
 				width: 100%;
-				background: none;
-				border: none;
-				border-bottom: 1px solid rgba(194, 194, 194, 0.42);
-				display: block;
-				color: rgba(255, 255, 255, .51);
 				font-family: "Open Sans", sans-serif;
-				font-size: 16px;
-				font-weight: 400;
 				letter-spacing: 0.4px;
-				padding-bottom: 8px;
-				outline: none;
-				input {
-					height: 50px;
+				.formGroup {
+					position: relative;
+					margin-bottom: 22px;
+					.formInput {
+						font-family: "Open Sans", sans-serif;
+						letter-spacing: 0.4px;
+						font-size: 16px;
+						color: rgba(255, 255, 255, .51);
+						width: 100%;
+						padding-bottom: 10px;
+						border: none;
+						border-bottom: 1px solid rgba(194, 194, 194, 0.42);
+						background-color: transparent;
+						transition: .3s;
+						outline: none;
+						z-index: 2;
+						&:focus {
+							border-bottom: 1px solid rgba(194, 194, 194, 1);
+						}
+						&:focus ~ .formLabel,
+						&:not(:placeholder-shown) ~ .formLabel {
+							top: -18px;
+							font-size: 12px;
+							color: rgba(255, 255, 255, .21);
+						}
+					}
+					.formLabel {
+						position: absolute;
+						color: rgba(255, 255, 255, .51);
+						top: 0;
+						left: 0;
+						transition: .3s;
+						z-index: -1;
+					}
+					.textarea {
+						height: 80px;
+					}
+				}
+				.formButton {
+					width: 125px;
+					height: 35px;
+					border-radius: 17px;
+					background-color: #0088be;
+					outline: none;
+					transition: .3s;
+					cursor: pointer;
+					&:focus,
+					&:hover {
+						background-color: #0088be9f;
+					}
 				}
 			}
 		}
