--- a/homework4/styles/style.less
+++ b/homework4/styles/style.less
@@ -40,10 +40,11 @@ p {
 	font-weight: 700;
 	text-transform: uppercase;
 	cursor: pointer;
+	transition: .3s;
 }
 
 .button:hover {
-	background-color: #49acdd
+	background-color: #49acdd;
 }
 
 .button:active,
@@ -670,10 +671,13 @@ footer {
 					outline: none;
 					transition: .3s;
 					cursor: pointer;
-
+					color: #fff;
+					font-family: 'Lato', sans-serif;
+					font-size: 14px;
+					font-weight: 700;
 					&:focus,
 					&:hover {
-						background-color: #0088be9f;
+						background-color: #49acdd;
 					}
 				}
 			}
