--- a/homework4/styles/style.less
+++ b/homework4/styles/style.less
@@ -576,6 +576,7 @@ footer {
 				align-items: flex-start;
 				justify-content: center;
 				font-size: 32px;
+				grid-row-gap: 50px;
 			}
 
 			.socials * {
