--- a/html5/style/style.scss
+++ b/html5/style/style.scss
@@ -147,6 +147,7 @@
 				text-align: center;
 				border-radius: 5px;
 				border: 1px solid #f9fafe;
+				transition: .3s;
 
 				&:hover {
 					background-color: rgba(0, 0, 0, .15);
