--- a/datagroup/style/style.css
+++ b/datagroup/style/style.css
@@ -5,13 +5,17 @@
           box-sizing: border-box;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: Montserrat, sans-serif;
 }
 
 .container {
   margin: 0 auto;
-  max-width: 960px;
+  width: 960px;
 }
 
 a {
@@ -24,10 +28,6 @@ h1, h2, h3 {
   text-align: center;
   font-weight: 700;
   margin: 10px 0;
-}
-
-.menu {
-  margin: 0 auto;
 }
 
 .menu .btn {
