--- a/datagroup/style/style.scss
+++ b/datagroup/style/style.scss
@@ -4,13 +4,17 @@
 	box-sizing: border-box;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	font-family: Montserrat, sans-serif;
 }
 
 .container {
 	margin: 0 auto;
-	max-width: 960px;
+	width: 960px;
 }
 
 a {
@@ -26,7 +30,7 @@ h1, h2, h3 {
 }
 
 .menu {
-	margin: 0 auto;
+	// margin: 0 auto;
 	.btn {
 		width: 100%;
 		margin: 10px 0;
